--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@
 _site
 Gemfile.lock
 *.code-workspace
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
