오류 테스트

--- a/_config.yml
+++ b/_config.yml
@@ -6,26 +6,26 @@ favicon: images/favicon.ico
 version: 2
 
 # Personal info
-name: Hyungook OH
-title: Frontend developer
-email: nenonenoberneno@gmail.com
-website: https://hyungook.github.io/hyungooks-story/
+name: Brett Harris
+title: Senior Network System Administrator
+email: brett.h@email.co.uk
+website: www.github.com/sproogen/resume-theme
 
 # Dark Mode (true/false/never)
-darkmode: true
+darkmode: false
 
 # Social links
-# twitter_username: facespics
-github_username: hyungook
+twitter_username: facespics
+github_username: sproogen
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: hyungookoh
-# linkedin_username: jameswgrant
+instagram_username: jameswgrant
+linkedin_username: jameswgrant
 # xing_username: jekyll
 # pinterest_username: jekyll
-# youtube_username: globalmtb
+youtube_username: globalmtb
 # googleplus_username: +jekyll
 # orcid_username: 0000-0000-0000-0000
 
@@ -48,145 +48,69 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  안녕하세요,
-  신입 프론트엔드 개발자 오형욱입니다.
-  지금까지 습득해온 개발/디자인 등의 다양한 능력을 저만의 이야기로 멈추지 않고,
-  프로젝트를 통해 대중과 소통하고 교류할 수 있는 <mark>프론트 개발자</mark>가 되고 싶습니다.
+  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
 
-  저의 CLIFTON STRENGTHSFINDER 강점 조사 상위 5가지는 '책임/성취/공정성/긍정/절친'입니다.
-  목적한 성취를 이루며 공정성 있는 자세로 동료들과 협력하며 동료/선배님들을 실망시키지 않는 책임감 있는 모습 보여드리고 싶습니다.
+  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
 
 content:
-  - title: Growth Process # Title for the section
+  - title: Projects # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
-        title: Growth Process_1
+        title: Super awesome project
+        link: github.com/sproogen
         # link_text: Project Website
         additional_links:
-          - title: 감사와 겸손
+          - title: sproogen/modern-resume-theme
+            icon: fab fa-github
+            url: github.com/sproogen/modern-resume-theme
           # - title:  Github page for project (eg. sproogen/modern-resume-theme)
           #   icon: fab fa-github
           #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
         quote: >
-          겸손한 자세를 유지합니다.
+          This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
         description: | # this will include new lines to allow paragraphs
-          제 인생에 멘토이신 부모님께서는 `범사에 감사하고 겸손하라. 사람은 신뢰를 줄 수 있어야 한다.` 고 늘 말씀해주셨습니다. 그래서 저는 그 말씀을 마음 깊이 새겨 그렇게 살기 위해 노력하고 있습니다.
-          부모님께서는 제가 남에게 믿음을 줄 수 있는 사람이 될 수 있도록 항상 저를 먼저 믿어주시고 묵묵히 지켜주시며 힘이 되어주셨습니다. 덕분에 저는 어떤 일을 하든지 매사에 자신감을 가지고 임할 수 있게 되었습니다.
-
-  - title: Growth Process_2 # Title for the section
-    layout: top-middle
-        title: Growth Process_2
-        # link_text: Project Website
-        additional_links:
-          - title: 성실함
-          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
-          #   icon: fab fa-github
-          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
-        quote: >
-          성실함은 곧 경쟁력이다.
-        description: | # this will include new lines to allow paragraphs
-          “성실함은 곧 경쟁력이다.” 어릴 적부터 아버지께서 항상 하신 말씀입니다. 저는 초등학교 때부터 개근상은 물론이고, 중학교 때 교실에 반에 열쇠를 담당할 정도로 성실함 하나는 자신 있게 얘기할 수 있습니다. 자연스럽게 성인이 되어서도 항상 수업시간 20분 전, 과제제출은 정해진 시간보다 사전에 했습니다. 이러한 성격으로 학과 내에서 최고의 성적도 받았고, 교수님들과 친구들 사이에 깊은 신뢰를 얻게 되었습니다. 이러한 경험이 회사에 이 바지하는 것에 크게 도움이 될 것입니다.
-
-  - title: Character and pros and cons # Title for the section
-    layout: top-middle
-        title: Character and pros and cons
-        # link_text: Project Website
-        additional_links:
-          - title: 자석 같은 남자
-          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
-          #   icon: fab fa-github
-          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
-        quote: >
-          인사성이 밝습니다 :)
-        description: | # this will include new lines to allow paragraphs
-          “성실함은 곧 경쟁력이다.” 어릴 적부터 아버지께서 항상 하신 말씀입니다. 저는 초등학교 때부터 개근상은 물론이고, 중학교 때 교실에 반에 열쇠를 담당할 정도로 성실함 하나는 자신 있게 얘기할 수 있습니다. 자연스럽게 성인이 되어서도 항상 수업시간 20분 전, 과제제출은 정해진 시간보다 사전에 했습니다. 이러한 성격으로 학과 내에서 최고의 성적도 받았고, 교수님들과 친구들 사이에 깊은 신뢰를 얻게 되었습니다. 이러한 경험이 회사에 이 바지하는 것에 크게 도움이 될 것입니다.
-  
-
-  - title: Career_1 # Title for the section
-    layout: top-middle
-        title: Career_1
-        # link_text: Project Website
-        additional_links:
-          - title: GOP 대대인사계원
-          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
-          #   icon: fab fa-github
-          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
-        quote: >
-          General Outpost(GOP)
-        description: | # this will include new lines to allow paragraphs
-          저는 강원도 양구 해발 1,220m의 산 정상에 위치한 21사단 GOP 부대에서 <mark>대대 인사계원</mark>으로 군 복무를 했습니다. 대대 인사계원이라고 하면 흔히들 행정병이라고 생각하지만, 주간에는 대대 인사계원으로서의 업무를 수행하였고 야간에는 부대 인원 부족으로 인해 GOP 축선 경계근무 지원을 다녀왔으며, 그리고 GOP 철수 후 FEBA 부대에서는 유격훈련과 혹한기 훈련, 위병소 근무까지. GOP 부대 복무 군인으로서 경험할 수 있는 모든 경험을 했습니다.
-          본래의 직책인 대대 인사계원의 업무는 부대의 모든 병사의 신상정보 관리와 간부, 병사의 휴가 그리고 근무 수당 상신, 부대 행사 계획 등을 총괄/관리하는 업무를 하는 것입니다. 책임과 부담감을 갖는 업무이기에 대대 인사계원의 업무에만 집중을 해도 하루가 부족하지만 부대의 사정상 그렇지는 못 하였습니다.
-          군대는 포기하고 싶다고 포기하고, 그만두고 싶다고 해서 그만 둘 수 있는 집단이 아니라 생각합니다. 자신의 맡은 임무는 어떻게 해서든 해결하고 책임을 져야하는 곳 입니다. 저는‘나’혼자서는 해결할 수 없는 일들이 많다는 것을 알고 있습니다. 간혹 혼자서는 해결할 수 없는 업무가 주워졌을 때에는 동료에게 도움을 요청하였고, 저와 동료는 서로‘협력’ 하여 문제를 해결해 맡은 임무를 잘 해결하였으며 간부들과 병사들에게 인정받는 병사가 되었습니다.
-          어려움이 닥쳤을 때 포기하지 않고 끝까지 해결하기 위해 노력할 수 있었던 것은 나에게 주어진 업무에 대한 책임감과 혼자서는 할 수 없는 일도 동료와 함께‘협력’한다면 충분히 해결할 수 있다는 믿음 때문이었습니다.
-
-  - title: Career_2 # Title for the section
-    layout: top-middle
-        title: Career_2
-        # link_text: Project Website
-        additional_links:
-          - title: 취업
-          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
-          #   icon: fab fa-github
-          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
-        quote: >
-          the Eland Group Contents Designer
-        description: | # this will include new lines to allow paragraphs
-          대학 재할시절 저의 꿈은 웹 퍼플리셔였습니다.
-          4학년 졸업작품을 반응형 웹 제작으로 진행하면서 그 꿈을 키워갔었습니다.
-          강남 sbs 아카데미에서 반응형 웹 6개월 과정 수업을 통해 배운 html, css, jquery를 활용하여 반응형 웹을 제작하였는데,
-          내가 원하고 생각한 대로 구현할 수 있는 웹 코딩이에 큰 재미와 흥미를 느끼며, 힘든 줄 모르고 열심히 반응형 웹 디자인에 몰입했었습니다.
-          그 덕분에 그 해 1,2학기 올 A+ 4.5 만점이라는 좋은 결실를 맺을 수 있었고, 재미와 흥미를 느낀 후에 좋은 결과까지 얻어 코딩에 대한 재미는 점점 더 커지고 있었습니다. 
-          웹 퍼블리셔를 꿈꾸며  코딩 공부를 하던 중에 어떤 계기로 안정적이며 괜찮은 복지의 회사에 입사할 수 있는 기회가 생겨 웹 개발과는 별개의 생활을 하게 되었습니다.
-          취업 후 이랜드 그룹의 전반적인 콘텐츠 제작 업무를 하며, 나름 안정적인 삶을 살고 있었지만 마음 한 켠에는 해소되지 않은 갈증이 남아 있었습니다.
-          업무가 즐겁진 않았지만  함께 일하는 동기들 그리고 선후배분들과의 합이 너무 좋았고, 안정적이라는 장점 때문에 버틸 수 있었다고 생각합니다.
-          하지만, 10년 뒤의 제 모습을 그려보니 그 삶은 제가 원하고 꿈꾸던 모습이 아니라 판단하였습니다.
-          더 늦기 전에 다시 개발자에 대한 꿈을 키우기 위해 주말과 퇴근 후의 시간을 모두 투자하며 <mark>프론트엔드 개발자</mark>를 준비하고 있습니다.
+          I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
 
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: Eland Group
-        caption: 2018 - 2020
-        sub_title: Contents Design
+        title: The Boring Company
+        link: boringcompany.com
+        # link_text: boringcompany.com
+        sub_title: Senior Network System Administrator
+        caption: November 2017 - Present
         quote: >
-          Deliver the joy of seeing through a sensuous design.
+          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
         description: | # this will include new lines to allow paragraphs
-          이랜드그룹 인하우스 팀 내에서 이랜드 그룹의 전반적인 콘텐츠 디자인(그래픽, 편집, 로고 등) 업무를 하였습니다.
-          사내 홈페이지, 그룹 공식 블로그, 공식 SNS 콘텐츠 디자인과 공식 유튜브 로고 및 기타 그래픽을 제작했습니다.
+          Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
 
-  - title: Skill # Title for the section
+  - title: Education # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        name: Front-end
-        title: Front-end
+        title: Harvard University
+        caption: 2010 - 2013
+        sub_title: BSc Computer Science
+        quote: >
+          Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
         description: | # this will include new lines to allow paragraphs
-          * Javascript
-          * HTML5
-          * CSS3
-      - layout: left
-        name: Library
-        title: Library
-        description: | # this will include new lines to allow paragraphs
-          * React JS
-          * React Native
-          * Typescript
-          * Jquery
-      - layout: left
-        name: Back-end
-        title: Back-end
-        description: | # this will include new lines to allow paragraphs
-          * Node JS
-      - layout: left
-        name: Design
-        title: Design
-        description: | # this will include new lines to allow paragraphs
-          * Photoshop
-          * Adobe XD
-          * Illustrator
+          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
 
+          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+
+  - title: A Little More About Me
+    layout: text
+    content: | # this will include new lines to allow paragraphs
+      Alongside my interests in networks and software engineering some of my other interests and hobbies are:
+      - Rock climbing
+      - Gaming
+      - Knitting
+      - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
+
+      Look at this cool image  
+      ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
 
 # Footer
 footer_show_references: true
