--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ content:
         # link_text: Project Website
         quote: >
         description: | # this will include new lines to allow paragraphs
-          “성실함은 곧 경쟁력이다.” 어릴 적부터 아버지께서 항상 하신 말씀입니다. 저는 초등학교 때부터 개근상은 물론이고, 중학교 때 교실에 반에 열쇠를 담당할 정도로 성실함 하나는 자신 있게 얘기할 수 있습니다. 자연스럽게 성인이 되어서도 항상 수업시간 20분 전, 과제제출은 정해진 시간보다 사전에 했습니다. 이러한 성격으로 학과 내에서 최고의 성적도 받았고, 교수님들과 친구들 사이에 깊은 신뢰를 얻게 되었습니다. 이러한 경험이 회사에 이 바지하는 것에 크게 도움이 될 것입니다.
+          <mark>“성실함은 곧 경쟁력이다.”</mark> 어릴 적부터 아버지께서 항상 하신 말씀입니다. 저는 초등학교 때부터 개근상은 물론이고, 중학교 때 교실에 반에 열쇠를 담당할 정도로 성실함 하나는 자신 있게 얘기할 수 있습니다. 자연스럽게 성인이 되어서도 항상 수업 시간 20분 전, 과제 제출은 정해진 시간보다 사전에 했습니다. 이러한 성격으로 회사 생활 중에도 단 한 번의 지각도 없이 성실히 직장 생활을 하였으며, 저한테는 믿고 업무를 맡길 수 있는 업무 일정에 대한 문제는 단 한 번도 일으키지 않았고 그로 인해 직장 동료들과 선배들에게 신뢰를 얻게 되었습니다. 이러한 경험이 회사에 이바지하는 것에 크게 도움이 될 것입니다.
 
   - title: Haracter and Pros and Cons # Title for the section
     layout: list # Type of content section (list/text)
@@ -86,7 +86,7 @@ content:
         # link_text: Project Website
         quote: >
         description: | # this will include new lines to allow paragraphs
-          저는 인사성 밝고 친화력이 좋습니다. 어릴 적, 하루에도 몇 번씩, 만날 때마다 꼬박꼬박 인사를 잘한다고 동네 어르신들께서 기억하실 정도로 인사성이 밝습니다. 그래서인지 남녀노소 불문하고 쉽게 친해집니다. 다니는 교회에서 학생 시절 임원을 하고 중국에서 인턴 생활을 할 때도 대표님께서 따로 생활비를 주실 정도로 좋아해 주셨습니다. 맞벌이하시는 부모님 덕에 외가댁 식구들과 함께 살았기에 이런 성격이 되었는지도 모르겠습니다. 윗사람을 공경할 줄 알고 아랫사람을 섬길 줄 아는, 또한 많은 사람과 어울릴 줄 아는 그런 장점을 갖고 있습니다.
+          저는 인사성 밝고 친화력이 좋습니다. 어릴 적, 하루에도 몇 번씩, 만날 때마다 꼬박꼬박 인사를 잘한다고 동네 어르신들께서 기억하실 정도로 인사성이 밝습니다. 그래서인지 남녀노소 불문하고 쉽게 친해집니다. 법인 대표님과 팀장님이 따로 언급을 하실 정도로 밝게 인사한다는 얘기를 들을 정도였습니다.. 맞벌이하시는 부모님 덕에 외가댁 식구들과 함께 살았기에 이런 성격이 되었는지도 모르겠습니다. 윗사람을 공경할 줄 알고 아랫사람을 섬길 줄 아는, 또한 많은 사람과 어울릴 줄 아는 그런 장점을 갖고 있습니다.
 
   - title: Career_1 # Title for the section
     layout: list # Type of content section (list/text)
