--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ email: nenonenoberneno@gmail.com
 website: https://hyungook.github.io/ooks-story/
 
 # Dark Mode (true/false/never)
-darkmode: false
+darkmode: true
 
 # Social links
 github_username: hyungook
