--- a/_config.yml
+++ b/_config.yml
@@ -126,15 +126,13 @@ content:
 
           처음 웹이라는 분야에 관심이 생긴 건, 대학교 3학년 웹 디자인에 대해 공부를 하면서입니다. 감각적이면서 사용자를 고려한 UI/UX. 그리고 사용자가 필요로 하는 서비스를 지원하는 기능까지. 너무나도 매력적인 분야라 생각했습니다.
 
-          첫 코딩으로 반응형 웹 6개월 과정으로 배운 html, css, jquery를 활용한 반응형 웹 디자인입니다.
+          내가 원하고 생각한 대로 구현되는 웹페이지에 큰 재미와 흥미를 느끼며, 웹 개발자를 꿈꾸며 한 단계씩 성장하고 있었습니다.
 
-          내가 원하고 생각한 대로 구현되는 웹페이지에 큰 재미와 흥미를 느끼며, 웹 디자인/개발자를 꿈꾸며 한 단계씩 성장하고 있었습니다.
-
-          개발자를 꿈꾸며 공부를 하던 중에 디자이너로 업무를 하게 되었는데 꿈과 현실을 타협하게 되어 잠시 개발 공부를 내려놓게 되었습니다.
+          개발자를 꿈꾸며 공부를 하던 중에 디자이너로 업무를 하게 되었는데, 꿈과 현실을 타협하게 되어 잠시 개발 공부를 내려놓게 되었습니다.
 
           2년이라는 공백이 생겼지만, 공백 기간이 있었던 만큼 개발에 더 집중하고 열정을 쏟을 수 있게 된 것 같습니다.
 
-          코리아 it 아카데미 학원에서 프론트엔드 6개월 과정과 SBS 아카데미 반응형 웹 6개월 수업을 수료하였고, 학원 외에도 부족한 부분을 보완하기 위해 인프런, 드림코딩 등의 온라인 강의를 통해 꾸준히 학습하고 있습니다.
+          코리아 it 아카데미 학원에서 프론트엔드 6개월 과정과 SBS 아카데미 웹 수업 6개월 수업을 수료하였고, 학원 외에도 부족한 부분을 보완하기 위해 인프런, 드림코딩 등의 온라인 강의를 통해 꾸준히 학습하고 있습니다.
 
           그리고, 온라인/오프라인 스터디를 진행하며 스터디원들과 개발 지식/노하우/개발 트렌드 등을 나누며
           간단한 토이 프로젝트나 클론 코딩을 진행하며 <mark>프론트엔드 개발자</mark>로서의 능력을 키워가고 있습니다.
